--- a/index.html
+++ b/index.html
@@ -463,15 +463,33 @@
         //     console.log("student" + index + " score is " + studentsScores + " and it's " + mark)
         // })
         //--------------------------------MAP----------------------------------
-        const temp = [0, 4, 5, 6, 3, 2, 10, 5, 3, -1, -4, -2]
+        // const temp = [0, 4, 5, 6, 3, 2, 10, 5, 3, -1, -4, -2]
 
-        const farenheit = [];
+        // let tF = temp.map(item => {
+        //     console.log(item);
+        //     return 10+item*1.8
+        // })
+        // console.log(tF)
+        //-----------------------------------------------------------------------------
+        // let a = [33, 4, 23];
+        // let b = a.map(item => {
+        //     return item
+        // })
+        // console.log(b)
 
-        let tF = temp.map(item => {
-            console.log(item);
-            return 10+item*1.8
-        })
-        console.log(tF)
+        const z = [
+            {"name": ' Ivan', 'order': 12, 'sum': '123,5'},
+            {"name": 'Sergey   ', 'order': 12, 'sum': '123.5'},
+            {"name": ' ivanka   ', 'order': 12, 'sum': '123, 5'},
+            {"name": 'Ivanov Petr  ', 'order': 12, 'sum': '123,50'},
+
+        ];
+        const zBack = z.map(item => {
+            item.name = item.name.trim().toLocaleLowerCase();
+            return item
+        });
+        console.log(zBack);
+        
     </script>
 </body>
 </html>
